<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/colorMainDark"
    android:orientation="vertical">

    <include layout="@layout/custom_about_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingRight="30dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:fontFamily="@font/verdanab"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp"
                android:text="@string/about3"
                android:textColor="@color/white"
                android:fontFamily="@font/verdanab"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp"
                android:text="@string/about4"
                android:textColor="@color/white"
                android:fontFamily="@font/verdanab"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp"
                android:text="Features:"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp"
                android:text="@string/about5"
                android:textColor="@color/white"
                android:fontFamily="@font/verdanab"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingTop="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="20dp"
                android:text="DEVELOPERS/AUTHORS"
                android:textColor="@color/white"
                android:fontFamily="@font/verdanab"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="30dp"
                android:text="Capacio, Arabella A.\nEspina KC B.\nEstrada, JJ Jomari\nTrivino, Renz Angelo A."
                android:textColor="@color/white"
                android:fontFamily="@font/verdanab"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>